# python-demo

./: .gitignore  README.md  config.conf  pyproject.toml  requirements.txt
com/remember/aria2/: aria2-util.py
com/remember/basic/: README.md  copy-simple.py  decorator.py  lazy-usage.py  pickle-json.py  regex.py  threading-lock.py  threading-queue.py  try-except.py
com/remember/db/: sqlite_test2.py  sqlite_utils.py
com/remember/email/: SendEmail.py  requirements.txt
com/remember/excel/: README.md  readexcel.py
com/remember/face/: app.py  requirements.txt
com/remember/ffmpegtest/: test.py  test2.py
com/remember/homework/: identity.py  test.py  test1.py
com/remember/media/: dy.py
com/remember/mysql/: MySQLConnector.py  MysqlClient.py  PyMySQL.py
com/remember/numpy/: attributes.py  np-array.py  np-concat.py
com/remember/pandas/: toexcel.py
com/remember/tensorflow/: Dockerfile  app.py  simplefied-training.py
com/remember/thread/: ThreadDemo.py
com/remember/utils/: db_utils.py  html_utils.py  image_utils.py  log_utils.py  os_utils.py  string_utils.py
com/remember/wy/: qiangpiao.py
com/remember/xq/: dy.py
com/remember5/aria2/: aria2-util.py
com/remember5/ascii_print/: README.md  chinese_print.py  main.py
com/remember5/basic/: calculator.py  generator.py  pickle-json.py  stirng-advanced.py  threading-simple.py  try-except.py  unittest-simple.py
com/remember5/db_tables_docs/: README.md
com/remember5/email/: SendEmailByArgs.py
com/remember5/es/: RAEDME.md  connect.py
com/remember5/face/: Dockerfile  README.md  gunicorn.conf  (+1 more)
(+389 files in other folders)
