[project]
name = "python-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Wang Jiahao", email = "1332661444@qq.com"}
]
requires-python = ">3.10,<3.13"
dependencies = [
    "pymysql>=1.1.1",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "mysql-connector-python>=9.1.0",
    "sqlparse>=0.5.3",
    "python-docx>=1.1.2",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "pyinstaller>=6.11.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_demo"]
